variant dark mode color scheme changes, forum preview fix

--- a/variants/AncMed/resources/darkMode/style.css
+++ b/variants/AncMed/resources/darkMode/style.css
@@ -4,7 +4,7 @@
 .variantAncMed .country1 { color: rgb(102, 176, 201) ! important; } /* Carthage */
 .variantAncMed .country2 { color: rgb(234, 235, 168) ! important; } /* Egypt    */
 .variantAncMed .country3 { color: rgb(150, 193, 144) ! important; } /* Greece   */
-.variantAncMed .country4 { color: rgb(210, 66, 167) ! important; } /* Persia   */
+.variantAncMed .country4 { color: rgb(195, 140, 215) ! important; } /* Persia   */
 .variantAncMed .country5 { color: rgb(232, 107, 107) ! important; } /* Rome     */
 
 .variantAncMed .occupationBar1 { background-color: #79AFC6; } /* Carthage */
