--- a/variants/ClassicGvI/resources/darkMode/style.css
+++ b/variants/ClassicGvI/resources/darkMode/style.css
@@ -1,7 +1,7 @@
 @CHARSET "ISO-8859-1";
 
 .variantClassicGvI .country0 { color: rgba(255, 255, 255, 0.8) ! important; } /* Global */
-.variantClassicGvI .country1 { color: rgb(216, 122, 0) } /* Germany */
+.variantClassicGvI .country1 { color: rgb(202, 172, 133) ! important } /* Germany */
 .variantClassicGvI .country2 { color: rgb(50, 168, 109) ! important; } /* Italy */
 
 .variantClassicGvI .occupationBar1 { background-color: #A08A75; } /* Germany */
